@@ -23,3 +23,5 @@ val add_path_for : string -> string -> unit
 
 (* Used by emacs ? *)
 val emacs : bool ref
+
+val machine_readable : bool ref
